--- a/src/app.less
+++ b/src/app.less
@@ -1,6 +1,19 @@
-.wrap {
+#center(@direction:row) {
     display: flex;
+    flex-direction: @direction;
     justify-content: center;
     align-items: center;
+    align-content: center;
+}
+
+.wrap {
+    #center(column);
     height:400px;
+}
+
+.content {
+    img {
+        height: 100px;
+        width: 150px;
+    }
 }
