fix: 更改多页打包结构

--- a/pages/index/app.less
+++ b/pages/index/app.less
@@ -1,8 +1,9 @@
 .wrap {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height:400px;
+    height:100vh;
 }
 
 .content {
