--- a/pages/other/app.less
+++ b/pages/other/app.less
@@ -1,6 +1,7 @@
 .wrap {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height:400px;
+    height:100vh;
 }
